[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project]
name = "datclass"
authors = [
    { name = "foyoux" },
]
description = "python package dataclass utils"
keywords = ["dataclass"]
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dynamic = ["version", "dependencies"]


[project.urls]
"Source" = "https://github.com/foyoux/datclass"
"Homepage" = "https://github.com/foyoux/datclass"
"Bug Tracker" = "https://github.com/foyoux/datclass/issues"


[project.scripts]
datclass = "datclass:main"


[tool.setuptools]
include-package-data = true


[tool.setuptools.dynamic]
version = { attr = "datclass.__version__" }
dependencies = { file = "requirements.txt" }


[tool.setuptools.packages.find]
where = ["src"]
exclude = ['tests*']
